--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,9 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     restart: always
+
+volumes:
+  postgres_data:
